--- a/public/global.css
+++ b/public/global.css
@@ -1,7 +1,18 @@
+:root {
+	--primary: white;
+	--secondary: #121212;
+	--primary-text: #a4a4a4;
+	--primary-option: #ececec;
+	--secondary-lightest: #272727;
+	--secondary-data: #2d2d2d;
+	--primary-closer: #5a5a5a;
+}
+
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	background-color: var(--secondary);
 }
 
 body {
